<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">一路精喜商城</string>
    <string name="home">首页</string>
    <string name="category">分类</string>
    <string name="slogan">情趣人生，大胆生活</string>
    <string name="my">我的</string>
    <string name="find_et_hint">点击搜索您想要的</string>
    <string name="search">搜索</string>
    <string name="myaddress1">收件地址</string>
    <string name="account_security">账号与安全</string>
    <string name="password_change">修改密码</string>
    <string name="telephone_change">手机号更改</string>
    <string name="myJXB">我的精喜币数量：</string>
    <string name="myJX">一路惊喜</string>
    <string name="myCollection">我的收藏</string>
    <string name="myOrder">我的订单</string>
    <string name="myAllCollection">查看所有收藏</string>
    <string name="success">保存成功</string>
    <string name="failed">保存失败</string>
    <string name="cart">购物车</string>
    <string name="login">登录</string>
    <string name="weekGoods">本周上新</string>
    <string name="erHuo">计时降价商品</string>
    <string name="teJia">抄底特卖</string>
    <string name="goodSeal">TOP热卖</string>
    <string name="general">综合</string>
    <string name="price">价格</string>
    <string name="seal_volume">销量</string>
    <string name="screen">筛选</string>
    <string name="classify">分类</string>
    <string name="price_segment">价格段</string>
    <string name="price_segment1">1-30</string>
    <string name="price_segment2">31-60</string>
    <string name="price_segment3">60-100</string>
    <string name="price_segment4">100+</string>
    <string name="register">注册</string>
    <string name="validate">验证</string>
    <string name="welcome">欢迎来到一路惊喜</string>
    <string name="suggest1">没有收到短信？请点击重新获取</string>
    <string name="getIde">60秒后重新获取</string>
    <string name="error">用户名和密码不为空</string>
    <string name="back">返回</string>
    <string name="feedback">意见反馈</string>
    <string name="clear">清理缓存</string>
    <string name="wifi_update">Wifi环境下自动升级客户端</string>
    <string name="flow_figure">3G/4G环境下被动加载图片</string>
    <string name="message_push">接受消息推送</string>
    <string name="about_us">关于我们</string>
    <string name="push">提交</string>
    <string name="exit">退出登录</string>
    <string name="comment_user">评论</string>
    <string name="add_address">新建</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="sex_secret">保密</string>
    <string name="portrait">更换头像</string>
    <string name="sex">性别</string>
    <string name="etSearch">输入你想要的内容</string>
    <string name="search_history_clear">清除搜索内容</string>
    <string name="search_history">历史搜索</string>
    <string name="for_more">更多</string>
    <string name="goods_everyday">每日必看</string>
    <string name="last_crazy">最后疯抢</string>
    <string name="for_sell">即将出售</string>
    <string name="myCollection_advise">收藏夹空荡荡的，赶快去逛逛吧！</string>
    <string name="myAllOrder_advise">你还没有订单，赶快去逛逛吧</string>
    <string name="myCollection_shopping">去逛逛</string>
    <string name="login_tel">请输入您的手机号码</string>
    <string name="cancel">取消</string>
    <string name="select_address">选择地区</string>
    <string name="select_goods">选择货物</string>
    <string name="logo">商标</string>
    <string name="account">账号：</string>
    <string name="person">收货人:</string>
    <string name="personal_number">手机号码：</string>
    <string name="personal_address_verbose_details">详细地址：</string>
    <string name="personal_address_verbose_details_hint">街道、楼牌号等</string>
    <string name="keep">保存</string>
    <string name="complete">完成</string>
    <string name="personal_address_verbose">所在地区：</string>
    <string name="account_hint">请输入您的手机号</string>
    <string name="account_account">请输入您的账号</string>
    <string name="welcome_name_hint">给自己取一个名字吧</string>
    <string name="welcome_text">请输入6-18位密码</string>
    <string name="welcome_sex">先让我了解了解你吧~</string>
    <string name="welcome_password_hint1">一路惊喜建议您时常更换密码</string>
    <string name="welcome_password_hint2">密码不要和别人分享哦</string>
    <string name="telephone_change_hint1">请输入新的手机号码</string>
    <string name="telephone_change_hint2">请输入当前密码</string>
    <string name="password_forget">忘记密码？</string>
    <string name="curtain">昵称：</string>
    <string name="password_confirm">确认密码：</string>
    <string name="password_display">显示密码</string>
    <string name="password">密码：</string>
    <string name="oldpassword">旧密码：</string>
    <string name="newpassword">新密码：</string>
    <string name="password1">请输入您的密码</string>
    <string name="style_switch">验证码登录</string>
    <string name="prompt">请输入验证码</string>
    <string name="myCentre">我的个人中心</string>
    <string name="myAllOrder_layout">一路惊喜-我的全部订单</string>
    <string name="OrderConfirm_layout">确认订单</string>
    <string name="OrderConfirm_advise">\t请填写您的收货地址</string>
    <string name="PayMode">支付方式</string>
    <string name="AliPay">支付宝</string>
    <string name="WinXinPay">微信支付</string>
    <string name="CODPay">货到付款</string>
    <string name="goods_details">商品详情</string>
    <string name="JXB">精喜币</string>
    <string name="confirm">确认</string>
    <string name="goods_freePosts">运费</string>
    <string name="confirm_pay">确认付款</string>
    <string name="allpay">实付款:</string>
    <string name="confirmPay">提交订单</string>
    <string name="leave_message">请给我们留言</string>
    <string name="order_details">订单详情</string>
    <string name="for_delivery_layout">一路惊喜—我的订单(待发货)</string>
    <string name="deliveryed_layout">一路惊喜-我的订单(已发货)</string>
    <string name="forpay_layout">一路惊喜-我的订单(待付款)</string>
    <string name="completed_layout">一路惊喜-我的订单(已完成)</string>
    <string name="drawback_tv">在下面输入您的退款理由(500字以内)</string>
    <string name="drawback_activity">退款</string>
    <string name="drawback_et_hint">输入退款理由，我帮您解决</string>
    <string name="logistics_activity">物流详情</string>
    <string name="myCollection_layout">一路惊喜-我的收藏</string>
    <string name="myFit_layout">健康管理</string>
    <string name="MyFit_count">我的健康记录</string>
    <string name="MyActivity_layout">我参与的活动</string>
    <string name="MyRecommend_layout">应用推荐</string>
    <string name="MyRecommend_message">暂无应用推荐</string>
    <string name="myAllOrder">\t我的全部订单</string>
    <string name="personal_information">个人信息</string>
    <string name="activity_address">收货地址管理</string>
    <string name="address_add">新建收货地址</string>
    <string name="confirm_refresh">收货信息修改</string>
    <string name="confirm_refresh_button">确认修改</string>
    <string name="slient_recognition_address">设为默认地址\n(注：下次下单自动使用该地址)</string>
    <string name="personal_sex">修改性别</string>
    <string name="camera_pop_camera">相机拍摄</string>
    <string name="camera_pop_album">从相机中选取</string>
    <string name="tele_change_pop_change">更换手机</string>
    <string name="setting_clear_pop">确定清理</string>
    <string name="camera_pop_cancel">取消</string>
    <string name="cal_left">日历向左</string>
    <string name="cal_right">日历向右</string>
    <string name="sunday">周日</string>
    <string name="monday">周一</string>
    <string name="Tuesday">周二</string>
    <string name="Wednesday">周三</string>
    <string name="Thursday">周四</string>
    <string name="Saturday">周六</string>
    <string name="friday">周五</string>
    <string name="forPay">待付款</string>
    <string name="forDelivery">待发货</string>
    <string name="Deliveryed">已发货</string>
    <string name="completed">已完成</string>
    <string name="MyCollection">\t我的收藏</string>
    <string name="MyActivity">\t我参与的活动</string>
    <string name="MyRecommend">应用推荐</string>
    <string name="password_hint">请输入密码</string>
    <string name="edit">编辑</string>
    <string name="setting">设置</string>
    <string name="send">发送</string>
    <string name="your_suggest">您的意见</string>
    <string name="your_suggest_hint">请在这里添加对一路惊喜的意见，我们将不断改进，谢谢支持</string>
    <string name="feedback_telephone">联系方式</string>
    <string name="feedback_telephone_hint">手机号或者QQ号(选填)</string>
    <string name="suggest">请先登录再查看</string>
    <string name="cart_empty">购物车肚子空空</string>
    <string name="for_pay_empty">您还没有需要支付的商品</string>
    <string name="for_delivery_deliveryed">您暂时没有订单</string>
    <string name="mycollection_empty">收藏夹肚子空空</string>
    <string name="myOrder_empty">你还没有订单</string>
    <string name="selectAll">全选</string>
    <string name="selectAgain">再来一份</string>
    <string name="pushComment">评价</string>
    <string name="press">催单</string>
    <string name="drawback">申请退款</string>
    <string name="view_logistics">查看物流</string>
    <string name="buy">去结算</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="action_settings">Settings</string>
    <string name="myShop">购物车</string>
    <string name="updateShopNum">修改商品数量</string>
    <string name="all_comment">全部</string>
    <string name="excited">满意</string>
    <string name="normal">一般</string>
    <string name="dissatisfied">不满意</string>
    <string name="updateAddress">修改地址</string>
    <string name="numberSub">-</string>
    <string name="numberAdd">+</string>
    <string name="shopTotal">合计：</string>
    <string name="shopTotalNum">￥0.00</string>
    <string name="shopTotalPrice">总额：</string>
    <string name="checkOut">去结算</string>
    <string name="delete">删除</string>
    <string name="collection">收藏</string>
    <string name="check_more_comment">查看具体评论</string>
    <string name="goods_details_image_text">图文详情</string>
    <string name="comment">评分</string>
    <string name="overall_merit">综合评价</string>
    <string name="User_comment">用户评价</string>
    <string name="comment_information">商品信息描述</string>
    <string name="allslect">全选</string>
    <string name="sure">确定</string>
    <string name="sureOrder">确认订单</string>
    <string name="leaveMeassge">给我们留言</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="text_btn_addIntoCart">加入购物车</string>
    <string name="goods_comment_null">这件商品暂时还没有评论</string>
    <string name="accomplish">完成</string>
    <string name="account_secure">账号与安全</string>
    <string name="login_password">登录密码</string>
    <string name="secure_telephone">手机号码</string>
    <string name="secure_telephone_change">去更换</string>
    <string name="login_password_tip">*建议您定期更换登录密码</string>
    <string name="provider">麦塔工作室</string>
    <string name="comment_hint">长度在1~500个字中间\n写下您的购物体验会对我们更好的服务很有帮助呦~</string>
    <string name="image">图片</string>
    <string name="later_on">请稍后</string>


</resources>
