<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
        android:background="@color/bg_gray">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white" >

        <ImageButton
                android:id="@+id/ib_back_feedback"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:background="#00000000"
                android:contentDescription="@string/back"
                android:src="@drawable/top_arrow_back"
                />


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/myJX"
                android:textSize="20sp"
                android:textColor="#363636"
                />
        <Button
                android:id="@+id/feedback_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/send"
                android:background="#00000000"
                android:textColor="#555555"/>
    </RelativeLayout>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_suggest"
            android:layout_marginTop="24dp"
            android:textColor="#454545"
            android:layout_marginStart="24dp"
            android:textSize="14sp"/>

    <EditText
            android:layout_marginTop="6dp"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:gravity="start"
            android:hint="@string/your_suggest_hint"
            android:paddingTop="10dp"
            android:paddingStart="18dp"
            android:paddingEnd="16dp"
            android:textColor="#363636"
            android:background="@color/white"
            android:id="@+id/feedback_suggest"
            />


    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feedback_telephone"
            android:textColor="#454545"
            android:layout_marginTop="20dp"
            android:layout_marginStart="24dp"/>




    <EditText
            android:id="@+id/feedback_telephone_et"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:paddingStart="18dp"
            android:paddingEnd="2dp"
            android:background="@color/white"
            android:hint="@string/feedback_telephone_hint"
            android:textSize="18sp" />




</LinearLayout>