<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
        android:background="@color/bg_gray">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/white" >

        <ImageButton
                android:id="@+id/ib_back_drawback"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:background="#00000000"
                android:contentDescription="@string/back"
                android:src="@drawable/top_arrow_back"
                />


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/drawback_activity"
                android:textSize="19sp"
                android:textColor="#333333"
                />

    </RelativeLayout>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/drawback_tv"
            android:textColor="#555555"
            android:textSize="15sp"
            android:layout_margin="10dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:hint="@string/drawback_et_hint"
            android:gravity="start"
            android:padding="10dp"
            android:background="@color/white"
            android:id="@+id/et_drawback"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sure"
            android:background="@color/red"
            android:layout_margin="20dp"
            android:id="@+id/btn_drawback_sure"/>


</LinearLayout>