<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
        android:background="@color/bg_gray">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white" >

        <ImageButton
                android:id="@+id/recover_ib_back"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:background="#00000000"
                android:contentDescription="@string/back"
                android:src="@drawable/top_arrow_back" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/validate"
                android:textSize="20sp"
                android:textColor="#2b2b2b"
                />
    </RelativeLayout>
    <EditText
            android:layout_marginTop="20dp"
            android:id="@+id/recover_telephone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="@color/white"
            android:hint="@string/login_tel"
            android:inputType="phone"
            android:textSize="20sp" />
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:background="@color/white"
            android:layout_marginTop="4dip">

        <EditText
                android:id="@+id/recover_message_num"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/white"
                android:hint="@string/prompt"
                android:inputType="number"
                android:textSize="20sp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"/>
        <com.metamall.Clutter.TimeButton.TimeButton
                android:text="@string/getIde"
                android:textSize="15sp"
                android:layout_width="92dp"
                android:layout_height="48dp"
                android:background="#cccccc"
                android:textColor="#303030"
                android:id="@+id/recover_getAgain"/>


    </LinearLayout>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/suggest1"
            android:textSize="14sp"
            android:textColor="#848484"/>
    <Button
            android:id="@+id/recover_confirm"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="15dp"
            android:background="@drawable/selector_btn_login"
            android:enabled="false"
            android:text="@string/sure"
            android:textColor="@color/white"
            android:textSize="17sp"/>


</LinearLayout>